feat: define proto api plan
